# Astinel-backend

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  DEPS.md  DIRECTORY.md  FIRST_COMMIT.md  ISSUES.md  LICENSE  PHASE3_PARSER_PLAN.md  PHASE4_RULES_PLAN.md  PHASE6_CLI_ARCH.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: formatting.rs  full_scan.rs  parser.rs  rule_engine.rs
crates/sentinel-ai/: Cargo.toml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: app.rs  commands.rs  config.rs  errors.rs  exit.rs  lib.rs  main.rs  output.rs  paths.rs  scan.rs  terminal.rs
crates/sentinel-config/: Cargo.toml
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: ast.rs  category.rs  error.rs  finding.rs  lib.rs  registry.rs  rule.rs  rule_id.rs  scan_result.rs  score.rs  severity.rs  span.rs
crates/sentinel-parser/: Cargo.toml
crates/sentinel-parser/src/: ast.rs  error.rs  lib.rs  parser.rs  visitor.rs
crates/sentinel-report/: Cargo.toml
crates/sentinel-rules/: Cargo.toml
crates/sentinel-rules/src/: config.rs  diagnostic.rs  filter.rs  lib.rs  metadata.rs  registry.rs  result.rs  runner.rs  suppression.rs  testing.rs
crates/sentinel-rules/src/builtin/: auth_mistake.rs  contract_upgrade.rs  dead_code.rs  gas_optimization.rs  integer_overflow.rs  large_storage_write.rs  missing_require_auth.rs  missing_ttl.rs  mod.rs  unsafe_panic.rs  unused_storage.rs
crates/sentinel-utils/: Cargo.toml
crates/sentinel-utils/src/: logging.rs
migrations/: 20250101000001_create_users.sql  20250101000002_create_organizations.sql  20250101000003_create_members.sql  20250101000004_create_projects.sql  20250101000005_create_repositories.sql  20250101000006_create_scan_jobs.sql  20250101000007_create_scan_results.sql  20250101000008_create_findings.sql  20250101000009_create_reports.sql  20250101000010_create_audit_logs.sql  20250101000011_create_api_keys.sql  20250101000012_create_webhooks.sql  20250101000013_create_github_installations.sql  20250101000014_create_notification_events.sql  20250101000015_create_contract_deployments.sql
src/: lib.rs
src/ai/: mod.rs  provider.rs  routes.rs
src/api/: errors.rs  extractors.rs  metrics.rs  middleware.rs  mod.rs  response.rs
src/api/routes/: auth.rs  contracts.rs  dashboard.rs  findings.rs  health.rs  mod.rs  notifications.rs  openapi.rs  projects.rs  reports.rs  scans.rs  version.rs  wallet.rs  webhooks.rs
src/auth/: errors.rs  jwt.rs  middleware.rs  mod.rs  password.rs  rbac.rs  wallet.rs
src/cache/: mod.rs  redis.rs
src/cli/: app.rs  commands.rs  config.rs  errors.rs  exit.rs  mod.rs  paths.rs  progress.rs  scan.rs  terminal.rs
src/config/: config_impl.rs  error.rs  mod.rs
src/contracts/: deploy.rs  mod.rs  rpc.rs  types.rs
src/core/: category.rs  error.rs  finding.rs  mod.rs  registry.rs  rule.rs  rule_config.rs  rule_id.rs  scan_result.rs  score.rs  severity.rs
src/database/: connection.rs  health.rs  migrations.rs  mod.rs  pool.rs
src/database/models/: api_key.rs  audit_log.rs  contract_deployment.rs  finding.rs  github_installation.rs  member.rs  mod.rs  notification_event.rs  organization.rs  project.rs  report.rs  repository.rs  scan_job.rs  scan_result.rs  user.rs  webhook.rs
src/database/repositories/: api_key_repository.rs  contract_deployment_repository.rs  finding_repository.rs  mod.rs  notification_repository.rs  organization_repository.rs  project_repository.rs  report_repository.rs  scan_repository.rs  user_repository.rs
src/errors/: mod.rs
src/handlers/: mod.rs
src/jobs/: mod.rs  queue.rs  scan_job.rs  status.rs  worker.rs
src/middleware/: mod.rs
src/repositories/: mod.rs
src/scanner/: error.rs  metrics.rs  mod.rs  scan_request.rs  scan_result.rs  traits.rs
src/scanner/parser/: ast.rs  error.rs  mod.rs  parser_impl.rs  project.rs  visitor.rs
src/scanner/report/: formatter.rs  json.rs  markdown.rs  mod.rs  pretty.rs  sarif.rs
src/scanner/rules/: config.rs  diagnostic.rs  filter.rs  metadata.rs  mod.rs  registry.rs  result.rs  runner.rs  suppression.rs  testing.rs
src/services/: contract_service.rs  github.rs  mod.rs  scan_service.rs
src/state/: mod.rs
src/telemetry/: mod.rs
src/utils/: logging.rs
(+11 files in other folders)
