[package]
name = "astinel-backend"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Astinel — Security scanning platform for Stellar and Soroban"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = "2.7"
syn = { version = "2.0", features = ["full", "parsing", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
walkdir = "2.5"
glob = "0.3"
clap = { version = "4.5", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
stellar-strkey = "0.0.18"
base64 = "0.22"

# API
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Cache
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }

# Runtime
tokio = { version = "1", features = ["full"] }

# Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
axum-test = "16"

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "full_scan"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "rule_engine"
harness = false

[[bin]]
name = "astinel-cli"
path = "src/bin/astinel-cli.rs"

[[bin]]
name = "astinel-server"
path = "src/bin/astinel-server.rs"
